改善版（中高）

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>サイバー攻防デュエル（ブラウザ版）</title>
+  <title>セキュリティ版クイズバトル</title>
   <style>
     :root{--card-bg:#ffffff;--bg:#f3f6fb;--accent:#2563eb;--danger:#ef4444;--good:#10b981}
     html,body{height:100%;margin:0;font-family:system-ui,-apple-system,"Hiragino Kaku Gothic ProN","Noto Sans JP",Meiryo,Arial;}
@@ -36,7 +36,7 @@
   <div class="card">
     <div class="header">
       <div>
-        <div class="title">⚔️ サイバー攻防デュエル（ブラウザ版）</div>
+        <div class="title">⚔️ セキュリティ版クイズバトル</div>
         <div class="small">学習しながら敵を倒すクイズゲーム。テーマ学習→復習モードあり。</div>
       </div>
       <div class="status">
@@ -229,3 +229,4 @@
   </script>
 </body>
 </html>
+
